--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 p{font size:20px;
     color:red;}
 
-body{background-color: r:24 g:20 b:20;}
-
 </style>
+
+<img src="https://static.wikia.nocookie.net/de7c9225-fa24-42a2-bb65-b422f9d18a9d">
 </body>
 
 
