--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ p{font size:20px;
 </style>
 
 <img src="https://static.wikia.nocookie.net/de7c9225-fa24-42a2-bb65-b422f9d18a9d">
-     <h3>YES THAT'S HER ART BELONGS TO @purpleandgreenareabsolutepeak MOOOT!!!!!!</h3>
+     <h3>YES THAT'S HER ART BELONGS TO @purpleandgreenareabsolutepeak MOOOT!!!!!</h3>
 </body>
 
 
